--- a/css/index.css
+++ b/css/index.css
@@ -218,8 +218,32 @@ body{
 }
 #shouye  #main .main-jianjie .main-news p span{
 	float:right;
-	    color: #b9b9b9;
+	color: #b9b9b9;
 }
+.pagination {
+	  position: absolute;
+	  z-index: 50;
+	  bottom: 30px;
+	  width: 100%;
+	  text-align: center;
+}
+.swiper-pagination-switch {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-radius: 8px;
+  background: #555;
+  margin: 0 5px;
+  opacity: 0.8;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+.swiper-active-switch {
+  background: #fff;
+}
+
+
+
 #shouye  .color-blue{
 	color: #00e86d !important;
 }
